Add url regexp check, install meta request gem for nice debug tool

--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,9 +1,12 @@
+<%= link_to "回首頁", root_path %>
 <h1>請輸入網址</h1>
 <%= form_tag '/', method: :get do %>
   <%= label_tag :url, "網址：" %>
   <%= url_field_tag :url, nil %>
   <%= submit_tag "確認" %>
 <% end %>
+<br />
+<%= flash[:notice] %>
 <hr/>
 <% if @photos %>
   <% @photos.each do |photo| %>
